                  Thu Jan 24 23:03:44 UTC 2008


Directory tools/scripts
 asim-batch                Locally Modified          214 

Directory etc
 asimrc.template           Locally Modified          214 

Updating with simcore changes (rev. 2515 - Krishna Rangan)

- added KEEP_STATS_FILE (an asim-batch option) to work around the stats file
being deleted.

----------
spartha1    Date: Thu Jan 24 18:10:02 EST 2008  CSN: CSN-asimcore-216
                  Thu Jan 24 23:10:02 UTC 2008


Directory modules/power_model
 null_power_model.h        Locally Modified          215 

Updating with simcore changes (rev. 2527 - Michael Powell)

Added null declaration and definition for new VECTOR_POWER_MACRO_CLASS.

--mdpowel1

----------
spartha1    Date: Thu Jan 24 18:11:28 EST 2008  CSN: CSN-asimcore-217
                  Thu Jan 24 23:11:28 UTC 2008


Directory libperl/AsimShell/lib/AsimShell
 Help.pm                   Locally Modified          216 
 Commands.pm               Locally Modified          216 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          216 

Directory libperl/Asim/lib/Asim/Package
 Commit.pm                 Locally Modified          216 

Directory libperl/Asim/lib/Asim
 Edit.pm                   Locally Modified          216 

Updating with simcore changes (rev. 2529 - Krishna Rangan)

- added support for batch commit of svn & cvs packages.

----------
mcadler     Date: Wed Feb  6 10:39:13 EST 2008  CSN: CSN-asimcore-218
                  Wed Feb  6 15:39:13 UTC 2008


Directory libperl/Asim/lib/Asim
 Module.pm                 Locally Modified          217 

- "dict" SCons class now named "iface"
- C++ include files now of type "H" instead of "CPP"

----------
mcadler     Date: Wed Feb  6 14:53:06 EST 2008  CSN: CSN-asimcore-219
                  Wed Feb  6 19:53:06 UTC 2008


Directory libperl/Asim/lib/Asim
 Module.pm                 Locally Modified          218 

Generate error message when filename isn't defined.